tests/ui/use/pub-use-self-super-crate.stderr
error[E0365]: `self` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-use-self-super-crate.rs:2:13
   |
LL |     pub use self as this;
   |             ^^^^^^^^^^^^ re-export of crate public `self`
   |
   = note: consider declaring type or module `self` with `pub`

error[E0365]: `super` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-use-self-super-crate.rs:6:17
   |
LL |         pub use super as parent;
   |                 ^^^^^^^^^^^^^^^ re-export of crate public `super`
   |
   = note: consider declaring type or module `super` with `pub`

error[E0365]: `super` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-use-self-super-crate.rs:8:17
   |
LL |         pub use self::super as parent2;
   |                 ^^^^^^^^^^^^^^^^^^^^^^ re-export of crate public `super`
   |
   = note: consider declaring type or module `super` with `pub`

error[E0365]: `self` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-use-self-super-crate.rs:10:25
   |
LL |         pub use super::{self as parent3};
   |                         ^^^^^^^^^^^^^^^ re-export of crate public `self`
   |
   = note: consider declaring type or module `self` with `pub`

error[E0365]: `super` is only public within the crate, and cannot be re-exported outside
  --> $DIR/pub-use-self-super-crate.rs:12:24
   |
LL |         pub use self::{super as parent4};
   |                        ^^^^^^^^^^^^^^^^ re-export of crate public `super`
   |
   = note: consider declaring type or module `super` with `pub`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0365`.
